docs: implemented changes after first review

--- a/WRITEUP - Project2 Kinematics.ipynb
+++ b/WRITEUP - Project2 Kinematics.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "[DH_img]: ./images/DH_parameters2.jpg\n",
     "[angles123]: ./images/theta123.jpg\n",
+    "[kuka_arm]: ./images/kuka.jpg\n",
     "\n",
     "\n",
     "### 1 - Run the forward_kinematics demo and evaluate the kr210.urdf.xacro file to perform kinematic analysis of Kuka KR210 robot and derive its DH parameters.\n",
@@ -198,11 +199,19 @@
     "\n",
     "For the implementation of the project I have add the transformation matrix to a pickle file container (T0_X-matrix.pkl), the steps for that can be follow in the file (forward_kinematics.py)\n",
     "\n",
+    "\n",
     "Additionally the file (IK_calculation.py) a graphical analysis that I used for the visualization of the steps and debugging before the IK_debug.py file was available in the main repository.\n",
     "\n",
     "The commmented final code can be found in the file (.kuka_arm\\scripts\\IK_server.py)\n",
     "\n",
-    "\n"
+    "After the first review I have implemented the propossed changes in the IK_server, meanwhile I realized that I was not doung the correct subtitution in the correction matriz so my kuka_arm even reaching most of the objects did very strange movements in the joints 4,5,6. I have ammended the errors and extrated the matrix multiplication outside the main loop.\n",
+    "\n",
+    "Finally here you can see an image of my kuka_arm correctly picking and placing almost all of the blue cilinders (for the one in the ground and the last in the closet I think that I did not grasp it completely before clicking next.)\n",
+    "\n",
+    "![][kuka_arm]\n",
+    "\n",
+    "\n",
+    "PD: I hope that the next projects move better in the VM, I have suffer to run the simulation only getting maximum Real time factors of 0.6 when moving."
    ]
   }
  ],
